Entity api -partial refactor of package api

--- a/readme.Rmd
+++ b/readme.Rmd
@@ -303,9 +303,28 @@ search_test <-
 
 ```{r eval=F}
 location_codes <-
-  get_codes_stability_locations()
+  dictionary_stability_locations()
 location_test <-
-  get_data_locations_instability_api(
+  instability_api_locations(
+    location_ids = c("US", "IS", "CA", "TU", "CH", "UK", "IR"),
+    use_multi_locations = c(T, F),
+    variable_names = c('instability', 'tone', 'protest', 'conflict'),
+    time_periods = c('daily'),
+    nest_data = F,
+    days_moving_average = NA,
+    return_wide = T,
+    return_message = T
+  )
+
+location_test %>%
+  dplyr::filter(codeLocation %>% is.na()) %>%
+  group_by(nameLocation) %>%
+  summarise_at(.vars = c('instability', 'tone', 'protest', 'conflict'),
+               funs(mean)) %>%
+  arrange(desc(instability))location_codes <-
+  dictionary_stability_locations()
+location_test <-
+  instability_api_locations(
     location_ids = c("US", "IS", "CA", "TU", "CH", "UK", "IR"),
     use_multi_locations = c(T, F),
     variable_names = c('instability', 'tone', 'protest', 'conflict'),
