--- a/readme.Rmd
+++ b/readme.Rmd
@@ -75,8 +75,8 @@ The data tidying functions begin with `parse_` and they apply to a number of the
 
 #### <strong>Primary Functions</strong>
 * <strong>Full Text API</strong>
-	*   `get_data_ft_v2_api()` - retrieves descriptive data from V2 API see [this](https://asbcllc.com/blog/2017/august/intro_to_programming_with_gdeltr2/index.html) blog post for more on how to use this
-	*   `get_data_ft_trending_terms()` - retrieves trending terms over the last 15 minutes.  The term can be a GDELT tag, location, person, place, or thing.
+	*   `ft_v2_api()` - retrieves descriptive data from V2 API see [this](https://asbcllc.com/blog/2017/august/intro_to_programming_with_gdeltr2/index.html) blog post for more on how to use this
+	*   `ft_trending_terms()` - retrieves trending terms over the last 15 minutes.  The term can be a GDELT tag, location, person, place, or thing.
 
 * <strong>[GDELT Events](http://gdeltproject.org/data.html#documentation)</strong>
 	*   `get_urls_gdelt_event_log()` - retrieves descriptive data and urls for all available GDELT event downloads.
@@ -90,16 +90,16 @@ The data tidying functions begin with `parse_` and they apply to a number of the
 	    + mentions: This data contains information surrounding the processed events, including sources, tone, location within a document and this tying to a **Global Event ID**
 	* `get_urls_gkg_daily_summaries` - retrieves daily gkg capture logs; data begins in April of 2013.
 	  * Each day contains a count file and the full gkg output.
-	* `get_data_gkg_day_summary()` retrieves GKG daily summary data for specified date(s), this captures *count files* by `is_count_file = T`
+	* `get_data_gkg_days_summary()` retrieves GKG daily summary data for specified date(s), this captures *count files* by `is_count_file = T`
 	* `get_data_gkg_days_detailed()` - retrieves GKG data from the data cached every 15 minutes for specified date(s) for a given table.  The table can be one of `c('gkg', 'export', 'mentions')`.  This function may require significant bandwidth and memory given the potential file sizes.
 
 * <strong>[American Television Knowledge Graph](http://blog.gdeltproject.org/announcing-the-american-television-global-knowledge-graph-tv-gkg/)
   * `get_urls_gkg_tv_daily_summaries()` - retrieves available dates
-	* `get_data_gkg_tv_days()` - retrieves data for specified dates.  Note that the data is on a 2 day lag so the most recent data is 2 days old.
+	* `gkg_tv_days()` - retrieves data for specified dates.  Note that the data is on a 2 day lag so the most recent data is 2 days old.
 
 * <strong>[Location Sentiment API](http://blog.gdeltproject.org/announcing-the-gdelt-stability-dashboard-api-stability-timeline/)</strong>
-	* `get_codes_stability_locations()` - retrieves possible locations
-	* `get_data_locations_instability_api()` - retrieves instability data for a specified location and time period.  Variables can be `c('instability', 'conflict', 'protest', 'tone', 'relative mentions')` Time periods can be `c('daily', '15 minutes')`, for `daily` the data is the average per day of the specified variable for the last 180 days and for `15 minutes` the data is the variable reading every 15 minutes for the last week.
+	* `dictionary_stability_locations()` - retrieves possible locations
+	* `dictionary_stability_locations()` - retrieves instability data for a specified location and time period.  Variables can be `c('instability', 'conflict', 'protest', 'tone', 'relative mentions')` Time periods can be `c('daily', '15 minutes')`, for `daily` the data is the average per day of the specified variable for the last 180 days and for `15 minutes` the data is the variable reading every 15 minutes for the last week.
 	
 * <strong>[Visual Global Knowledge Graph](http://blog.gdeltproject.org/gdelt-visual-knowledge-graph-vgkg-v1-0-available/)</strong>
 	* `get_urls_vgkg()` - retrieves VGKG log urls
